--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libxfixes (1:4.0.5-1+squeeze1+build1) squeeze-lts; urgency=medium
+
+  * Rebuild against libx11-dev fixed for CVE-2013-7439.
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Fri, 17 Apr 2015 18:33:02 +0200
+
 libxfixes (1:4.0.5-1+squeeze1) oldstable-security; urgency=low
 
   * CVE-2013-1983
